# git-secret-rust

./: .gitignore  Cargo.toml  README.md  build.rs  git-secret.cfg
src/: cli.yml  consts.rs  errors.rs  lib.rs  main.rs  types.rs
src/cli/: cli.rs  main.rs
src/cli/commands/: add.rs  init.rs  mod.rs  tell.rs
src/commands/: init.rs  mod.rs
src/logic/: checks.rs  files.rs  fsdb.rs  keys.rs  mod.rs
