[package]
name = "git-secret"
version = "1.0.0"
authors = ["sobolevn <mail@sobolevn.me>"]
edition = "2018"
build = "build.rs"
readme = "README.md"

categories = ["command-line-utilities"]
homepage = "https://github.com/sobolev/git-secret"

[dependencies]
custom_error = "1.7.1"
clap = {version = "2.33", features = ["yaml", "suggestions", "color"]}
git2 = "0.10"

[build-dependencies]
clap = "2.33"

[[bin]]
name = "git-secret"
path = "src/cli/main.rs"

